Initial Design debugged

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Ahsan Raza</title>
+    <link rel="icon" type="image/x-icon" href="logo 2.png" />
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap"
@@ -154,7 +155,7 @@
       </div>
     </div>
     <div
-      class="md:flex hidden bg-[url(background.png)] w-full px-[4%] flex justify-between items-center gap-8"
+      class="md:flex hidden bg-[#1D1D1D] w-full px-[4%] flex justify-between items-center gap-8"
     >
       <div
         class="text-white font-[Montserrat] flex flex-col justify-center items-start py-8"
@@ -263,7 +264,7 @@
       </div>
     </div>
 
-    <div class="flex md:hidden bg-[url(background.png)] w-full px-[10%]">
+    <div class="flex md:hidden bg-[#1D1D1D] w-full px-[10%]">
       <div
         class="relative text-white font-[Montserrat] flex flex-col justify-center items-center py-8"
       >
@@ -500,7 +501,7 @@
       </div>
     </div>
     <div
-      class="bg-[url(PortfolioBG.png)] bg-cover bg-center w-full h-auto flex justify-center items-center py-20"
+      class="bg-[#1D1D1D] bg-cover bg-center w-full h-auto flex justify-center items-center py-20"
       id="portfolio"
     >
       <div
@@ -509,7 +510,6 @@
         PORTFOLIO
       </div>
     </div>
-    <div class="bg-[#1A1A1A] py-8"></div>
     <div class="grid lg:grid-cols-3 md:grid-cols-2 sm:grid-cols-1 w-full">
       <img src="Project1.png" class="w-full h-full" alt="Image" />
       <img src="Project2.png" class="w-full h-full" alt="Image" />
