--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <!--  -->
     <!--  -->
     <div
-      class="px-[4%] py-[1%] flex justify-between fixed top-0 w-full md:flex hidden bg-gradient-to-b from-black/100 to-[#d7d7d7]/20 z-50"
+      class="px-[4%] py-[1%] flex justify-between items-center fixed top-0 w-full md:flex hidden bg-gradient-to-b from-black/100 to-[#d7d7d7]/20 z-50"
     >
       <div class="rounded-full bg-white p-1 active:scale-100 hover:scale-115">
         <a href="#" rel="noopener noreferrer"
@@ -45,7 +45,7 @@
         /></a>
       </div>
       <div>
-        <div class="flex gap-8 justify-center">
+        <div class="flex gap-8 justify-center items-center">
           <div>
             <a
               class="bg-[#FFFFFF] w-30 rounded-full px-4 text-sm py-2 font-[Montserrat] hover:bg-[#1A1A2E] hover:text-white active:scale-90"
