Initial Design debugged2

--- a/index.html
+++ b/index.html
@@ -46,42 +46,37 @@
       </div>
       <div>
         <div class="flex gap-8 justify-center items-center">
-          <div>
-            <a
-              class="bg-[#FFFFFF] w-30 rounded-full px-4 text-sm py-2 font-[Montserrat] hover:bg-[#1A1A2E] hover:text-white active:scale-90"
-              href="#aboutme"
-              rel="noopener noreferrer"
-            >
-              About me
-            </a>
-          </div>
-          <div>
-            <a
-              class="bg-[#FFFFFF] w-30 rounded-full px-5 text-sm py-2 font-[Montserrat] hover:bg-[#1A1A2E] hover:text-white active:scale-90"
-              href="#skills"
-              rel="noopener noreferrer"
-            >
-              Skills
-            </a>
-          </div>
-          <div>
-            <a
-              class="bg-[#FFFFFF] w-30 rounded-full px-5 text-sm py-2 font-[Montserrat] hover:bg-[#1A1A2E] hover:text-white active:scale-90"
-              href="#portfolio"
-              rel="noopener noreferrer"
-            >
-              Portfolio
-            </a>
-          </div>
-          <div>
-            <a
-              class="bg-[#FFFFFF] w-30 rounded-full px-3 text-sm py-2 font-[Montserrat] hover:bg-[#1A1A2E] hover:text-white active:scale-90"
-              href="#contact"
-              rel="noopener noreferrer"
-            >
-              CONTACT ME
-            </a>
-          </div>
+          <a
+            class="text-center bg-[#FFFFFF] w-30 rounded-full px-4 text-sm py-2 font-[Montserrat] hover:bg-[#1A1A2E] hover:text-white active:scale-90"
+            href="#aboutme"
+            rel="noopener noreferrer"
+          >
+            About me
+          </a>
+
+          <a
+            class="text-center bg-[#FFFFFF] w-30 rounded-full px-5 text-sm py-2 font-[Montserrat] hover:bg-[#1A1A2E] hover:text-white active:scale-90"
+            href="#skills"
+            rel="noopener noreferrer"
+          >
+            Skills
+          </a>
+
+          <a
+            class="text-center bg-[#FFFFFF] w-30 rounded-full px-5 text-sm py-2 font-[Montserrat] hover:bg-[#1A1A2E] hover:text-white active:scale-90"
+            href="#portfolio"
+            rel="noopener noreferrer"
+          >
+            Portfolio
+          </a>
+
+          <a
+            class="text-center bg-[#FFFFFF] w-30 rounded-full px-3 text-sm py-2 font-[Montserrat] hover:bg-[#1A1A2E] hover:text-white active:scale-90"
+            href="#contact"
+            rel="noopener noreferrer"
+          >
+            CONTACT ME
+          </a>
         </div>
       </div>
     </div>
